--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dartz: ^0.10.1
   device_preview: ^1.2.0
   get_it: ^7.7.0
+  rive: ^0.13.4
+  lottie: ^3.1.2
 
 dev_dependencies:
   bloc_test: ^9.1.7
