--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,27 +8,47 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  dartz: ^0.10.1
+  device_preview: ^1.2.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
-  provider: ^6.1.2
-  http: ^1.2.2
-  equatable: ^2.0.5
-  dartz: ^0.10.1
-  device_preview: ^1.2.0
   get_it: ^7.7.0
-  rive: ^0.13.4
+  http: ^1.2.2
+  intl: ^0.19.0
   lottie: ^3.1.2
+  provider: ^6.1.2
+  rive: ^0.13.4
 
 dev_dependencies:
   bloc_test: ^9.1.7
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icons/logo.png"
+    background_color: "#F6F6F6"
+    theme_color: "#0D47A1"
+  windows:
+    generate: true
+    image_path: "assets/icons/logo.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icons/logo.png"
 
 flutter:
   uses-material-design: true
