✅ Build: Add assets to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,3 +53,8 @@ flutter_launcher_icons:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/icons/
+    - assets/rive/
+    - assets/lottie/
