--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   get_it: ^7.7.0
+  go_router: ^14.2.1
   http: ^1.2.2
   intl: ^0.19.0
   lottie: ^3.1.2
