--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   lottie: ^3.1.2
   provider: ^6.1.2
   rive: ^0.13.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   bloc_test: ^9.1.7
