--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   lottie: ^3.1.2
+  path: ^1.9.0
   provider: ^6.1.2
   rive: ^0.13.4
   shared_preferences: ^2.2.3
+  sqflite_common_ffi: ^2.3.3
 
 dev_dependencies:
   bloc_test: ^9.1.7
