--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  flutter_platform_alert: ^0.5.1
   get_it: ^7.7.0
   go_router: ^14.2.1
   http: ^1.2.2
