✅ Build: Add sqflite plugin for mobile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^6.1.2
   rive: ^0.13.4
   shared_preferences: ^2.2.3
+  sqflite: ^2.3.3+1
   sqflite_common_ffi: ^2.3.3
   window_size:
     git:
