--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^2.3.1
   sqflite: ^2.3.3+1
   sqflite_common_ffi: ^2.3.3
+  wakelock_plus: ^1.2.7
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
